--- a/style.css
+++ b/style.css
@@ -1,301 +1,325 @@
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
-.nav-item a{
-    font-size: 16px;
-    line-height: 24px;
-    color: #000000;
+.nav-item a {
+  font-size: 16px;
+  line-height: 24px;
+  color: #000000;
 }
-.sec-padding{
-    padding-bottom: 80px;
+.sec-padding {
+  padding-bottom: 80px;
 }
-.fixed-top{
-    background: #F0FFF0;
+.fixed-top {
+  background: #f0fff0;
 }
-.nav-item{
-    padding: 0px 5px;
+.nav-item {
+  padding: 0px 5px;
 }
-.nav-btn{
-    padding: 10px 28px !important;
-    background-color: #21B573;
-    color: #ffffff !important;
-    border: none;
-    border-radius: 33px;
+.nav-btn {
+  padding: 10px 28px !important;
+  background-color: #21b573;
+  color: #ffffff !important;
+  border: none;
+  border-radius: 33px;
 }
 
 /* Header section */
-.header-section{
-    height: 100vh;
-    background-color: #F0FFF0;
+.header-section {
+  height: 100vh;
+  background-color: #f0fff0;
 }
-.header-details h6{
-    color: #FD511A;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 10px;
+.header-details h6 {
+  color: #fd511a;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 10px;
 }
-.header-details h1{
-    font-weight: bold;
-    font-size: 48px;
-    line-height: 70px;
-    color: #000000;
-    margin-bottom: 19px;
+.header-details h1 {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 70px;
+  color: #000000;
+  margin-bottom: 19px;
 }
-.header-details h1 span{
-    color: #21B573;
+.header-details h1 span {
+  color: #21b573;
 }
-.header-details p{
-    font-size: 16px;
-    line-height: 36px;
-    color: #6C6B6B;
-    margin-bottom: 15px;
+.header-details p {
+  font-size: 16px;
+  line-height: 36px;
+  color: #6c6b6b;
+  margin-bottom: 15px;
 }
-.get-btn{
-    padding: 12px 35px;
-    background-color: #21B573;
-    color: #ffffff;
-    border: none;
-    border-radius: 33px;
-    transition: all .3s;
+.get-btn {
+  padding: 12px 35px;
+  background-color: #21b573;
+  color: #ffffff;
+  border: none;
+  border-radius: 33px;
+  transition: all 0.3s;
 }
-.get-btn:hover{
-    background-color: #1d9660;
+.get-btn:hover {
+  background-color: #1d9660;
 }
 
 /* Cards section */
-.cards-section{
-    margin-top: 40px;
+.cards-section {
+  margin-top: 40px;
 }
-.cards-inner{
-    padding: 50px 0px;
-    text-align: center;
-    background: #F8FFFB;
-    border-radius: 10px;
-    transition: all .4s;
+.cards-inner {
+  padding: 50px 0px;
+  text-align: center;
+  background: #f8fffb;
+  border-radius: 10px;
+  transition: all 0.4s;
 }
-.cards-inner:hover{
-    background: #FFFFFF;
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+.cards-inner:hover {
+  background: #ffffff;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
 }
-.cards-inner img{
-    width: 65px;
-    height: 83px;
+.cards-inner img {
+  width: 65px;
+  height: 83px;
 }
-.cards-inner h5{
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-    color: #413960;
-    margin-top: 20px;
-    margin-bottom: 0;
+.cards-inner h5 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #413960;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
-.cards-inner p{
-    font-size: 16px;
-    line-height: 24px;
-    color: #585859;
-    margin-bottom: 0;
+.cards-inner p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #585859;
+  margin-bottom: 0;
 }
 
 /* course-section */
-.title-text{
-    font-size: 36px;
-    line-height: 54px;
-    color: #413960;
-    font-weight: bold;
-    margin-bottom: 60px;
+.title-text {
+  font-size: 36px;
+  line-height: 54px;
+  color: #413960;
+  font-weight: bold;
+  margin-bottom: 60px;
 }
-.card{
-    border: none;
-    background: #FFFFFF;
-    box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
-    border-radius: 18px;
+.card {
+  border: none;
+  background: #ffffff;
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
 }
-.card-img-top{
-    padding: 20px;
-    padding-bottom: 0;
+.card-img-top {
+  padding: 20px;
+  padding-bottom: 0;
 }
-.card-body h5{
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 36px;
-    color: #413960;
-    margin-bottom: 3px;
+.card-body h5 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #413960;
+  margin-bottom: 3px;
 }
-.card-body p{
-    font-size: 16px;
-    line-height: 24px;
-    color: #585859;
-    margin-bottom: 19px;
+.card-body p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #585859;
+  margin-bottom: 19px;
 }
-.buy-btn{
-    padding: 8px 27px;
-    background-color: #21B573;
-    color: #ffffff;
-    border: none;
-    border-radius: 33px;
-    transition: all .3s;
+.buy-btn {
+  padding: 8px 27px;
+  background-color: #21b573;
+  color: #ffffff;
+  border: none;
+  border-radius: 33px;
+  transition: all 0.3s;
 }
-.buy-btn:hover{
-    background-color: #1d9660;
+.buy-btn:hover {
+  background-color: #1d9660;
 }
-.card-footer{
-    background: #ffffff;
-    border-top: 0px;
-    border-radius: 18px !important;
+.card-footer {
+  background: #ffffff;
+  border-top: 0px;
+  border-radius: 18px !important;
 }
-.date img{
-    width: 24px;
-    height: 24px;
+.date img {
+  width: 24px;
+  height: 24px;
 }
-.date h6{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #585859;
-    margin-left: 3px;
+.date h6 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #585859;
+  margin-left: 3px;
 }
 /* video area */
-.video-section{
-    background-color: #F0FFF0;
-    padding: 80px 0px;
-    margin-bottom: 50px;
+.video-section {
+  background-color: #f0fff0;
+  padding: 80px 0px;
+  margin-bottom: 50px;
 }
-.video-details h2{
-    font-size: 36px;
-    line-height: 54px;
-    color: #413960;
+.video-details h2 {
+  font-size: 36px;
+  line-height: 54px;
+  color: #413960;
 }
-.video-image img{
-    border-radius: 20px;
+.video-image img {
+  border-radius: 20px;
 }
-.video-image{
-    position: relative;
+.video-image {
+  position: relative;
 }
-.video-icon{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: grid;
-    place-items: center;
-    cursor: pointer;
+.video-icon {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  place-items: center;
+  cursor: pointer;
 }
 /* testimonail section */
-.testimonial-inner p{
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
-    margin-bottom: 0;
-    padding: 15px 0px;
-    margin-left: 50px;
+.testimonial-inner p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 0;
+  padding: 15px 0px;
+  margin-left: 50px;
 }
 /* subscribe area */
-.subscribe-inner{
-    background: #F0FFF0;
-    padding: 50px 0px;
-    border-radius: 20px;
-    margin-top: 30px;
-    margin-bottom: 50px;
+.subscribe-inner {
+  background: #f0fff0;
+  padding: 50px 0px;
+  border-radius: 20px;
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
-.subscribe-inner h2{
-    font-size: 36px;
-    line-height: 54px;
-    color: #413960;
-    margin-bottom: 30px;
-    font-weight: 600;
+.subscribe-inner h2 {
+  font-size: 36px;
+  line-height: 54px;
+  color: #413960;
+  margin-bottom: 30px;
+  font-weight: 600;
 }
-.subscribe-inner a{
-    text-decoration: none;
-    color: #ffffff;
+.subscribe-inner a {
+  text-decoration: none;
+  color: #ffffff;
 }
 /* Footer section */
-.footer-section{
-    padding-top: 55px;
-    background: #282531;
-    color: #FFFFFF;
+.footer-section {
+  padding-top: 55px;
+  background: #282531;
+  color: #ffffff;
 }
-.footer-p p{
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
+.footer-p p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
-.footer-inner{
-    padding-bottom: 75px;
+.footer-inner {
+  padding-bottom: 75px;
 }
-.footer-list-item ul li{
-    font-size: 16px;
-    line-height: 30px;
-    margin-bottom: 5px;
+.footer-list-item ul li {
+  font-size: 16px;
+  line-height: 30px;
+  margin-bottom: 5px;
 }
-.footer-list-item ul li:nth-child(1){
-    font-weight: bold;
+.footer-list-item ul li:nth-child(1) {
+  font-weight: bold;
 }
-.footer-list-item a{
-    color: #FFFFFF;
-    text-decoration: none;
+.footer-list-item a {
+  color: #ffffff;
+  text-decoration: none;
 }
-small{
-    font-size: 16px;
-    line-height: 30px;
-    color: #CDCDCD;
+small {
+  font-size: 16px;
+  line-height: 30px;
+  color: #cdcdcd;
 }
 
 /* Responsive Css */
 @media only screen and (max-width: 1024px) {
-    .header-section{
-        padding-top: 80px;
-    }
+  .header-section {
+    padding-top: 80px;
+  }
 }
 @media only screen and (max-width: 991px) {
-    .header-section {
-        height: 100%;
-        padding-bottom: 50px;
-        padding-top: 0;
-    }
-    .header-details {
-        padding-top: 120px;
-    }
-    .cards-inner{
-        margin-bottom: 20px;
-    }
-    .video-details {
-        margin-bottom: 50px;
-    }
-    .testimonial-inner{
-        text-align: center;
-    }
-    .testimonial-inner p{
-        margin-left: 0;
-    }
-    .nav-btn{
-        max-width: 20%;
-        text-align: center;
-    }
+  .header-section {
+    height: 100%;
+    padding-bottom: 50px;
+    padding-top: 0;
+  }
+  .header-details {
+    padding-top: 120px;
+  }
+  .cards-inner {
+    margin-bottom: 20px;
+  }
+  .video-details {
+    margin-bottom: 50px;
+  }
+  .testimonial-inner {
+    text-align: center;
+  }
+  .testimonial-inner p {
+    margin-left: 0;
+  }
+  .nav-btn {
+    max-width: 20%;
+    text-align: center;
+  }
 }
 @media only screen and (max-width: 767px) {
-    .card-deck{
-        display: block !important;
-    }
-    .card{
-        margin-bottom: 30px !important;
-    }
+  .card-deck {
+    display: block !important;
+  }
+  .card {
+    margin-bottom: 30px !important;
+  }
 }
 @media only screen and (max-width: 575px) {
-    .header-details h1 {
-        font-size: 44px;
-        line-height: 65px;
-        margin-bottom: 15px;
-    }
-    .footer-list-item ul li {
-        font-size: 14px;
-        line-height: 26px;
-    }
+  .header-details h1 {
+    font-size: 44px;
+    line-height: 65px;
+    margin-bottom: 15px;
+  }
+  .footer-list-item ul li {
+    font-size: 14px;
+    line-height: 26px;
+  }
+}
+
+/*Back to top button */
+.gotopbtn {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background: #27ae60;
+  bottom: 40px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  font-size: 22px;
+  border-radius: 50%;
+}
+
+.fas {
+  text-decoration: none;
+  color: white;
+}
+.fas:hover {
+  color: white;
 }
