--- a/Contributor/style2.css
+++ b/Contributor/style2.css
@@ -9,7 +9,7 @@ body{
     width: 300px;
     height: 430px;
     background: #FFF;
-    border-radius: 6px;
+    border-radius: 5px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -23,7 +23,7 @@ body{
     background: #7F00FF;
     }
     .image-container{
-    background: white;
+    background: lightyellow;
     width: 80px;
     height: 80px;
     border-radius: 50%;
