--- a/style.css
+++ b/style.css
@@ -691,14 +691,14 @@ body {
   width: 50px;
   height: 50px;
   background: #27ae60;
-  right: 50px;
+  right: 25px;
+  bottom: 25px;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
   color: white;
   font-size: 22px;
   border-radius: 50%;
-  margin-right: 40px;
 }
 
 .gotopbtn {
