--- a/style.css
+++ b/style.css
@@ -305,7 +305,13 @@ body {
 .video-details h2 {
   font-size: 36px;
   line-height: 54px;
-  color: #413960;
+  color: #03ecfc
+}
+
+.video-details p {
+  font-size: 15px;
+  line-height: 25px;
+  color: #034efc
 }
 
 .video-image img {
