fixed go to top button position
I have changed the position of go to top button, as go to top button is on top which is not good for user experience and also it look good at bottom

--- a/style.css
+++ b/style.css
@@ -692,6 +692,7 @@ body {
   height: 50px;
   background: #27ae60;
   right: 50px;
+  bottom: 30px;
   text-decoration: none;
   text-align: center;
   line-height: 50px;
